--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
@@ -18,6 +20,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.62.9",
     "@tanstack/react-table": "^8.20.6",
+    "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -27,8 +30,10 @@
     "next": "^15.1.5",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
+    "react-color": "^2.19.3",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^19.0.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-modal": "^3.16.3",
     "react-select": "^5.9.0",
     "react-toastify": "^10.0.6",
