--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
@@ -30,13 +31,16 @@
     "next": "^15.1.5",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-color": "^2.19.3",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^19.0.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-modal": "^3.16.3",
     "react-select": "^5.9.0",
+    "react-table": "^7.8.0",
     "react-toastify": "^10.0.6",
+    "react-tooltip": "^5.28.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4"
