--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.468.0",
     "next": "^15.1.5",
